tools/flowc/tests/errors/while_error.flow
import runtime;

export {
    sumArray(numbers : [int]) -> int;
}

// Incorrect implementation using a while loop
sumArray(numbers : [int]) -> int {
    sum = 0;
    i = 0;
    
    // Error: Flow9 doesn't support while loops
    while (i < length(numbers)) {
        sum = sum + numbers[i];
        i = i + 1;
    }
    
    sum;
}

// The correct way would be:
/*
sumArray(numbers : [int]) -> int {
    fold(numbers, 0, \acc, num -> acc + num);
}
*/